# quikcast

./: Cargo.toml  README.md
src/: cli.rs  client.rs  main.rs  screen_cap.rs  server.rs
