[package]
name = "quikcast"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["unicode", "derive"] }
color-eyre = "0.6.5"
env_logger = "0.11.8"
gstreamer = "0.23.7"
gstreamer-app = "0.23.5"
itertools = "0.14.0"
log = "0.4.27"
tokio = { version = "1.45.1", features = ["full"] }
